--- a/index.html
+++ b/index.html
@@ -3,8 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"  crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm">dec 14</div>
+            <div class="col-sm">dec 15</div>
+            <div class="col-sm">dec 16</div>
+            <div class="col-sm">dec 17</div>
+            <div class="col-sm">dec 18</div>
+        </div>
+        <div class="row">
+            <div class="col-sm">aaaaaa</div>
+            <div class="col-sm">aaaaaa</div>
+            <div class="col-sm">aaaaaa</div>
+            <div class="col-sm">aaaaaa</div>
+            <div class="col-sm">aaaaaa</div>
+        </div>
+        <div class="row">
+            <div class="col-sm">dec 21</div>
+            <div class="col-sm">dec 22</div>
+            <div class="col-sm">dec 23</div>
+            <div class="col-sm">dec 24</div>
+            <div class="col-sm">dec 25</div>
+        </div>
+        <div class="row">
+            <div class="col-sm">aaaaaa</div>
+            <div class="col-sm">aaaaaa</div>
+            <div class="col-sm">aaaaaa</div>
+            <div class="col-sm">aaaaaa</div>
+            <div class="col-sm">aaaaaa</div>
+        </div>
+    </div>
 </body>
 </html>
